BREAKING CHANGE: specify configs to include as trailing argument instead of -c
reuse -c for base mkimage.conf.
This sort of makes more sense, and allows combining multiple config files
into a single image (although they need to cooperate to build up variables)

--- a/README
+++ b/README
@@ -63,7 +63,7 @@ were used in base image.
 ## examples
 
 Sample config files, try from git root:
- ./mkimage.sh -c examples/foo.conf -o foo.swu
+ ./mkimage.sh -o foo.swu examples/foo.conf
 
 read each .conf file for their requirements (files to pre-create)
 all examples expect keys to have been generated before (./genkey.sh),
