add FORCE_VERSION to allow building always-install images
note this also allows building empty images, which might not be what
most people want

--- a/README
+++ b/README
@@ -22,6 +22,7 @@ ENCRYPT_KEYFILE: encrypt input files if set, generated if does not exist
                  on first use
 UBOOT_SIZE: pad uboot image with zeros up to this size (clear env)
             set to blank to keep original file size.
+FORCE_VERSION: allow building image with no explicit version set
 
 
 Glossary:
