mkimage.sh: fix swdesc_exec quoting and expose file as $1
swdesc_command and swdesc_exec had problems with file redirections not being
done within chroot, making commands harder to write than required.
The fix involves wrapping commands in sh -c '...', so the exec file argument
is no longer simply appendend but available as $1 inside the command instead.
This is actually easier to read when looking at desc files.

--- a/README
+++ b/README
@@ -68,7 +68,7 @@ swdesc_script <script>
   Run script inside new root
 
 swdesc_exec <file> <command>
-  Run command with <file> passed as argument inside the new root
+  Run command with <file> available as $1 inside the new root
   Note that this is run in the order swdesc is built, so adding
   a swdesc_exec before e.g. base_os will run before the target
   OS is setup and likely not work
