BREAKING CHANGE: swdesc_files: remove <name> argument, add --basedir, no longer follow symlinks
swdesc_files was much more limited than necessary. Allow creating slightly more
useful tar with directory components, skipping the useless symlink in OUTDIR phase,
and allowing to embed symlinks in the archive.
In particular, the openssh enable example could not have used swdesc_files to embed
the etc/runlevels symlink and now could.

--- a/README
+++ b/README
@@ -56,11 +56,14 @@ swdesc_tar <tar file> [--dest <dest>]
   Extract <tar file> at <path> within new system.
   Destination path must be within /var/app/(rollback/)?volumes
   unless rootfs is targeted (see <component> in Glossary), and defaults
-  to / for os variants and /var/app/rollback/volumes otherwise
+  to / for os versions and /var/app/rollback/volumes otherwise
 
-swdesc_files <name> [--dest <dest>] <file> [<more files>]
-  Copy files directly into <path> (no subdirectory are kept)
-  <name> is an arbitrary name (cannot reuse the same name twice)
+swdesc_files [--basedir <basedir>] [--dest <dest>] <file> [<more files>]
+  Copy files into <dest> (same defaults as swdesc_tar), as they
+  are relative to <basedir>
+  basedir defaults to the first argument if it is a directory (assumes
+  single argument: all the directory content will be extracted to <dest>),
+  or the first argument's parent otherwise.
 
 swdesc_command "<cmd>"
   Run command inside new root
