--- a/README
+++ b/README
@@ -62,6 +62,11 @@ Common options for all helpers:
     to an empty string), in which case the file will always be
     reinstalled so this is not recommended.
 
+--main-version
+  Tag this component's name/version as image's main version.
+  Only used for image managements (e.g. around hawkbit) which will
+  normally only consider the first one to be set
+
 
 Images are then built progressively by calling the following helpers:
 
