--- a/README
+++ b/README
@@ -28,7 +28,8 @@ FORCE_VERSION: allow building image with no explicit version set.
                (components with no versions will always be installed)
 	       Note that to avoid install loops with USB drive install,
 	       updates with FORCE_VERSION set will be renamed to
-	       <original_name>.swu.installed after successful install.
+	       <original_name>.swu.installed after successful install
+	       unless POST_ACTION=poweroff
 POST_ACTION: control behaviour post install
   - not set, empty or "reboot": reboot into new system after updating
   - poweroff: shut system down after install (useful for provisioning)
